--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul id="list">
+
+    </ul>
 
     <script src="script.js"></script>
 </body>
